docs: 更新API密钥配置为GOOGLE_GEMINI_API_KEY
关键更新:
- 所有测试工作流现在使用 GOOGLE_GEMINI_API_KEY secret
- 在代码中仍使用 GOOGLE_API_KEY 环境变量（自动映射）
- 创建 API_CONFIGURATION.md 详细说明密钥使用方法
- 更新 AI_DEVELOPER_GUIDE.md 和 AI_QUICK_START.md

AI开发者现在知道:
✅ GitHub Secret名称: GOOGLE_GEMINI_API_KEY
✅ 代码中使用: os.environ.get('GOOGLE_API_KEY')
✅ 所有工作流已正确配置环境变量映射

🤖 Ready for full translation functionality\!

--- a/.github/workflows/validate-ai-implementation.yml
+++ b/.github/workflows/validate-ai-implementation.yml
@@ -77,6 +77,9 @@ else:
     - name: 测试翻译器
       id: test_translator
       continue-on-error: true
+      env:
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
+        DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
       run: |
         echo "=== 测试翻译器 ==="
         
