refactor: 移除DeepL API简化配置
简化更新:
- 从所有工作流中移除 DEEPL_API_KEY 引用
- 只使用单一的 Google API (GOOGLE_GEMINI_API_KEY)
- 更新文档强调简单性
- AI开发者现在只需关注一个API密钥

保持简单直接 - 只使用Google翻译API 🎯

--- a/.github/workflows/test-translator.yml
+++ b/.github/workflows/test-translator.yml
@@ -45,9 +45,8 @@ jobs:
         
     - name: 运行翻译引擎测试
       env:
-        # AI开发者需要配置这些secrets
+        # AI开发者需要配置这个secret
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
-        DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
       run: |
         echo "开始测试翻译引擎..."
         
