refactor: 统一API密钥命名为GOOGLE_GEMINI_API_KEY
完全统一命名:
- 所有工作流从 GOOGLE_API_KEY 改为 GOOGLE_GEMINI_API_KEY
- 更新所有文档使用一致的环境变量名
- 消除了 Secret 和代码中不同命名的混淆
- AI开发者现在只需记住一个名称

✅ GitHub Secret: GOOGLE_GEMINI_API_KEY
✅ 代码使用: os.environ.get('GOOGLE_GEMINI_API_KEY')
✅ 完全一致，无映射，极简化 🎯

--- a/.github/workflows/test-full-pipeline.yml
+++ b/.github/workflows/test-full-pipeline.yml
@@ -85,7 +85,7 @@ jobs:
         
     - name: 步骤2 - 翻译测试
       env:
-        GOOGLE_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
+        GOOGLE_GEMINI_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
         DEBUG_MODE: ${{ github.event.inputs.debug_mode }}
       run: |
         echo "=== 步骤2: 内容翻译 ==="
