--- a/.github/workflows/test-translator.yml
+++ b/.github/workflows/test-translator.yml
@@ -46,7 +46,7 @@ jobs:
     - name: 运行翻译引擎测试
       env:
         # AI开发者需要配置这个secret
-        GOOGLE_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
+        GOOGLE_GEMINI_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
       run: |
         echo "开始测试翻译引擎..."
         
